# CoCOM

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CoCOM.code-workspace  README.md
.github/workflows/: build_windows.yml  codeql-analysis.yml  release_windows.yml
assets/: CoCOM-Portable.txt  assets.qrc  resource.rc  translations.qrc  wix_banner.pdn  wix_dialog.pdn
assets/icons/: README.md
assets/logos/: README.md  gen_ico.sh  lua.pdn  lua_black.pdn
assets/themes/darkstyle/: darkstyle.qss
assets/themes/default/: default.qss
assets/translations/: CoCOM_en.ts  CoCOM_zh_CN.ts  dictionary_zh_CN.qph
assets/translations_raw/: CoCOM_en.ts  CoCOM_zh_CN.ts
doc/: base.md
docs/: note.md
makespec/: VERSION_SUFFIX
scripts/: base.lua  cocom_ext.lua  hello.lua  hello_lua.lua
source/inc/: CoLua.h  Common.h  GlobalSettings.h  MainWindow.h  PlotWindow.h  SerialData.h  TextBrowser.h
source/inc/Chart/: Callout.h  Chart.h  ChartView.h  LineSeries.h
source/inc/IODevice/: CoDevice.h  IODeviceData.h
source/inc/Lua/: CoLua.h  CoLuaWorker.h
source/inc/Media/: MediaData.h  Serial.h
source/inc/Settings/: CommandSettings.h
source/inc/Widgets/: AppsDialog.h  Console.h  LuaConsoleWindow.h  MainWindow.h  PlotConfigDialog.h  PlotConfigTabWIdget.h  PlotWindow.h  SourceEditWindow.h  TextBrowser.h
source/src/: CoLua.cpp  ConfigDialog.cpp  GlobalSettings.cpp  MainWindow.cpp  PlotWindow.cpp  Serial.cpp  TextBrowser.cpp  main.cpp
source/src/Chart/: Callout.cpp  Chart.cpp  ChartView.cpp  LineSeries.cpp
source/src/IODevice/: CoDevice.cpp  IODeviceData.cpp  Serial.cpp
source/src/Lua/: CoLua.cpp
source/src/Media/: MediaData.cpp  SerialData.cpp
source/src/Widgets/: AppsDialog.cpp  ConfigDialog.cpp  Console.cpp  LuaConsoleWindow.cpp  MainWindow.cpp  PlotConfigDialog.cpp  PlotConfigTabWIdget.cpp  PlotWindow.cpp  SourceEditWindow.cpp  TextBrowser.cpp
src/: CoLua.cpp  CommandSettings.cpp  CommandsTab.cpp  Common.cpp  ConfigDialog.cpp  GlobalSettings.cpp  MainWindow.cpp  Serial.cpp  TextBrowser.cpp  main.cpp
src/include/: CoLua.h  CommandsTab.h  Common.h  ConfigDialog.h  GlobalSettings.h  MainWindow.h  Serial.h  TextBrowser.h
tools/: gen_release.sh
tools/shell_scripts/: debug_clean_rebuild.sh  debug_cmake_reconfig.sh  release_build.sh
ui/: appsDialog.ui  configDialog.ui  luaConsoleWindow.ui  mainWindow.ui  plotConfigDialog.ui  plotConfigTabWIdget.ui  plotWindow.ui  sourceEditWindow.ui
